@@ -5,6 +5,9 @@ Hardened the WMR100 driver against malformed packets.
 
 The plot images can now use UTF-8 characters.
 
+Fixed a problem where the Ambient threads could crash if there were
+no rain database entries.
+
 
 
 2.6.2 02/16/14
